# haka

lib/haka/: CMakeLists.txt
modules/alert/serial_printer/: CMakeLists.txt  main.c
modules/alert/serial_printer/doc/: module.rst
modules/alert/sms/: CMakeLists.txt  main.c
modules/alert/sms/doc/: module.rst
modules/log/syslog/doc/: module.rst
